Fix windows test